--- a/source/index.html
+++ b/source/index.html
@@ -252,11 +252,12 @@
                   </div>
                   <div class="range__values price-filter__inputs">
                     <label class="min-cost-label" aria-label="Минимальная цена">
-                      <input class="price-filter__input" id="input-with-keypress-0" name="min" type="text" />
+                      <input class="price-filter__input" id="input-with-keypress-0" name="min" type="number"
+                        placeholder="0" />
                     </label>
                     <span class="price-filter__inputs-dash">&nbsp;</span>
                     <label class="max-cost-label" aria-label="Максимальная цена">
-                      <input class="price-filter__input" id="input-with-keypress-1" name="max" type="text" />
+                      <input class="price-filter__input" id="input-with-keypress-1" name="max" type="number" />
                     </label>
                   </div>
                 </div>
@@ -299,7 +300,7 @@
               <fieldset class="form__fieldset price-filter">
                 <legend class="form__fieldset-title price-filter__title">Страна производитель</legend>
                 <ul class="price-filter__list">
-                  <li class="price-filter__item" >
+                  <li class="price-filter__item">
                     <label class="price-filter__item-checkbox checkbox" for="brazil" tabindex="0">
                       <div class="checkbox__wrapper">
                         <input class="checkbox__input" type="checkbox" id="brazil" name="brazil" checked>
@@ -308,9 +309,9 @@
                         </div>
                       </div>
 
-                        <span class="checkbox__label-text">
-                          Бразилия
-                        </span>
+                      <span class="checkbox__label-text">
+                        Бразилия
+                      </span>
                     </label>
                   </li>
                   <li class="price-filter__item">
@@ -379,11 +380,13 @@
 
             <div class="catalog__select">
               <span class="select__label">Сортировка:</span>
-              <select class="select__field" name="select1">
-                <option>по умолчанию</option>
-                <option>еще уровень</option>
-                <option>еще уровень</option>
-              </select>
+              <div class="select-wrapper">
+                <select class="select__field" name="select1">
+                  <option>по умолчанию</option>
+                  <option>еще уровень</option>
+                  <option>еще уровень</option>
+                </select>
+              </div>
             </div>
 
             <ul class="product__cards">
